# -

./: .gitignore  AsyncExportWorker.cpp  AsyncExportWorker.h  CMakeLists.txt  Customer.h  CustomerController.cpp  CustomerController.h  CustomerWorkspace.cpp  CustomerWorkspace.h  DataMockGenerator.cpp  DataMockGenerator.h  DatabaseManager.cpp  DatabaseManager.h  FollowRecord.h  GlobalModels.h  HighSeasManager.cpp  HighSeasManager.h  ICustomerRepository.h  ManagerMainWindow.h  MockCustomerRepo.h  SQLiteCustomerRepo.cpp  SQLiteCustomerRepo.h  TimelineWidget.cpp  TimelineWidget.h  adminmainwindow.cpp  adminmainwindow.h  basemainwindow.cpp  basemainwindow.h  customercarddialog.cpp  customercarddialog.h  customerdetaildialog.cpp  customerdetaildialog.h  followtimelinedialog.cpp  followtimelinedialog.h  import_customers_120.txt  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.h  (+9 more)
SourceCode/: CMakeLists.txt  readme.txt
SourceCode/include/: AsyncExportWorker.h  BaseMainWindow.h  Customer.h  DatabaseManager.h  SalesMainWindow.h  followtimelinedialog.h  logindialog.h
SourceCode/src/: HighSeasManager.cpp  SQLiteCustomerRepo.cpp  followtimelinedialog.cpp  main.cpp  managermainwindow.cpp
SourceCode/ui/: mainwindow.ui
src/app/: main.cpp
src/models/: Customer.h  FollowRecord.h  GlobalModels.h  user.h
src/repositories/: DatabaseManager.cpp  ICustomerRepository.h  SQLiteCustomerRepo.cpp  SQLiteCustomerRepo.h
src/services/: AsyncExportWorker.cpp  HighSeasManager.h  RandomDataGenerator.cpp  RandomDataGenerator.h
src/ui/auth/: logindialog.cpp  logindialog.ui
src/ui/core/: basemainwindow.cpp
src/ui/dialogs/: customerdetaildialog.cpp  customerdetaildialog.h  followtimelinedialog.cpp  userdetaildialog.cpp  userdetaildialog.h
src/ui/windows/: AdminMainWindow.h  ManagerMainWindow.h  adminmainwindow.cpp  managermainwindow.cpp  salesmainwindow.cpp
